--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <packaging>jar</packaging>
 
     <name>GetGlue Java API Wrapper</name>
-    <description>A Java wrapper around the v3 API of GetGlue using retrofit.</description>
+    <description>A Java wrapper around the v3 API of tvtag (formerly GetGlue) using retrofit.</description>
     <url>https://github.com/UweTrottmann/getglue-java</url>
     <inceptionYear>2013</inceptionYear>
 
